--- a/my-helm/fleet.yaml
+++ b/my-helm/fleet.yaml
@@ -12,10 +12,10 @@ helm:
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
   # If repo below is set this value if the chart name in the repo
-  chart: "https://jp-gouin.github.io/helm-openldap/"
+  chart: "openldap-stack-ha"
 
   # An https to a valid Helm repository to download the chart from
-  repo: "openldap-stack-ha"
+  repo: "https://jp-gouin.github.io/helm-openldap"
 
   # Used if repo is set to look up the version of the chart
   version: "4.2.2"
